# Ever4Linux

./: .gitignore  CMakeLists.txt  Ever4Linux.cpp  Ever4Linux.h  Ever4Linux.kdev4  README.md  main.cpp  resources.qrc
Ever4Linux/.kdev4/: Ever4Linux.kdev4
qml/: LeftPanel.qml  main.qml
src/: main.cpp
